# car_project_dev

./: LICENSE  Makefile  README.md  model_config.json  pyproject.toml  requirements_streamlit.txt  run_app.sh
MVP/: Main.py
brand_specific_models/: SUMMARY.md  model_info.json
notebooks/: Car Colour Model - v4.ipynb  Car_makers_model_classification.ipynb.ipynb  MODEL_TRAINING_yolo_Tee-v3_Top15.ipynb  MODEL_TRAINING_yolo_to_crop_image.ipynb  Vehicle_Damage_InceptionV3.ipynb  YoLo_classification car model classification.ipynb  cropper_custom.py  yolo_testing.ipynb
references/: Project.docx
reports/: Project_Progress_Report.md  generate_figures.py
runs/Tee_classify_top15/: agg_model_f1_by_make.csv  overall_make_metrics.csv
runs/Tee_classify_top15/make_cls_y11n_100e2/: args.yaml  detailed_predictions.csv  results.csv
runs/Tee_classify_top15/model_cls_100_y11n_100e/: args.yaml  results.csv
runs/Tee_classify_top15/model_cls_101_y11n_100e/: args.yaml  results.csv
runs/Tee_classify_top15/model_cls_105_y11n_100e/: aggregated_model_metrics.csv  args.yaml  results.csv
runs/Tee_classify_top15/model_cls_118_y11n_100e/: args.yaml  results.csv
runs/car_color_cnn/: class_index.json  classification_report.json  classification_report.txt  test_metrics.json  test_summary.json
yolo_cls_car_makes/: label_vocabulary.csv  train.cache  val.cache
yolo_cls_car_makes_allview/: label_vocabulary.csv  train.cache  val.cache
yolo_cls_car_makes_front_rear/: train.cache  val.cache
yolo_cls_car_type/: label_vocabulary.csv  train.cache  val.cache
(+90 files in other folders)
