[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "car_project_dev"
version = "0.0.1"
description = "This project focuses on developing and evaluating machine learning and computer vision techniques for extracting detailed metadata from images or video footage of vehicles. The goal is to accurately classify and identify key vehicle attributes such as make, model, body type, and color, as well as additional observable characteristics like roof racks, visible damage (e.g., dents or scratches), decals, and installed accessories."
authors = [
  { name = "Afraz_iLab_02_1" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["car_project_dev"]
include = ["pyproject.toml", "car_project_dev/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["car_project_dev"]
force-sort-within-sections = true

